# siRBench

./: .gitattributes  .gitignore  AGENT.md  README.md  igem_tools.csv  igem_tools_metrics.csv  leftout_metrics.txt  plot_igem_tools.py  plot_igem_tools_standard_only.py  test_metrics.txt
benchmark/competitors/: README.md  TOOLS_CHANGES.md  metrics_all.csv  prepare.py  run_tool.sh  setup.sh  smoke_test.sh
competitors/: README.md  TOOLS_CHANGES.md  fetch_with_proxy.sh  prediction_tools - Sheet1.csv  prepare.py  run_all.sh  run_oligoformer.sh  run_tool.sh  runner.py  setup.sh  test.py  tools_model_summary.csv  tools_overview.md  train.py
competitors/scripts/: metrics.py  plot_kde.py  plot_metrics.py  runner.py  test.py  train.py
data/: README.md  dataset_description.md  feature_definitions.csv  find_dropped_leftout.py  siRBench_full.csv  siRBench_full_base.csv  siRBench_full_base_1000.csv  siRBench_full_base_1000_test.csv  siRBench_full_base_1000_train.csv  siRBench_full_base_1000_val.csv  siRBench_full_with features.csv  siRBench_leftout.csv  siRBench_leftout_dropped.csv  siRBench_test.csv  siRBench_train.csv  siRBench_train_90.csv  siRBench_train_split.csv  siRBench_val_10.csv  siRBench_val_split.csv  sirbench_split.md  thresholds.md  thresholds_per_cell_line.csv
data/leftout/: siRBench_hela.csv  siRBench_leftout_dropped.csv
model/: CHANGES.md  README.md  eval.py  feature_builder.py  inference.py  train.py  tune.py
siRBench-model/: environment.yml  inference.py  pyproject.toml  train.py
siRBench-model/training_artifacts/: feature_artifacts.json
(+250 files in other folders)
