[project]
name = "sirbench-model"
version = "0.1.0"
description = "siRBench efficacy prediction model (Agentomics-ML)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "xgboost>=1.7,<2.0",
    "lightgbm>=4.0",
    "joblib>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
