[project]
name = "sirbench-model"
version = "0.1.0"
description = "siRBench baseline model (XGBoost + LightGBM)"
requires-python = "==3.12.0"
dependencies = [
  "joblib==1.5.3",
  "lightgbm==4.6.0",
  "numpy==2.3.5",
  "pandas==2.3.1",
  "scikit-learn==1.7.1",
  "scipy==1.16.3",
  "xgboost==1.7.6",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
